<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:textColor="@color/white" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="32sp" />
    
     <EditText
        android:id="@+id/userNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintRegisterUserName"
        android:textColor="@color/white"
        android:textSize="20sp" >

        <requestFocus />
        </EditText>
        
     <EditText
        android:id="@+id/userPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameTxt"
        android:layout_below="@+id/userNameTxt"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/hintUserPassword"
        android:inputType="textPassword" 
        android:textColor="@color/white"/>

      <Button
          android:id="@+id/buttonRegister"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/userPasswordTxt"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="85dp"
          android:background="@drawable/button"
          android:onClick="getFormData"
          android:text="@string/buttonLogin"
          android:textColor="@color/white" />

</RelativeLayout>
