<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".Result$DummySectionFragment" 
  	>

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:text="@string/result" 
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTotalQuestions"
        android:layout_below="@+id/textViewTotalQuestions"
        android:layout_marginTop="27dp"
        android:text="@string/attented"
        android:textSize="20sp" 
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/textView2"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="28dp"
        android:text="@string/right" 
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:text="@string/Time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/textView4"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignRight="@+id/textView7"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignBaseline="@+id/textViewTotalQuestions"
        android:layout_alignBottom="@+id/textViewTotalQuestions"
        android:layout_toRightOf="@+id/textView1"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewTotalQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/totalQuestions"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSeeQuestions"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPlayAgain"
        android:layout_alignBottom="@+id/buttonPlayAgain"
        android:layout_marginLeft="130dp"
        android:layout_toRightOf="@+id/textViewTime"
        android:background="@drawable/button"
        android:text="@string/seeQuestions"
        android:textColor="@color/white" 
        android:onClick="seeQuestions"/>

    <Button
        android:id="@+id/buttonPlayAgain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/section_label"
        android:background="@drawable/button"
        android:onClick="playAgain"
        android:text="@string/playAgain"
        android:textColor="@color/white" />

</RelativeLayout>
