<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="50sp"
        android:text="@string/after_login"
        android:textColor="@color/white"
        android:textSize="32sp" />


    <Button
        android:id="@+id/buttonSettings"
        android:textColor="@color/white"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/buttonSettings" 
        android:background="@drawable/button"
        android:onClick="goSettings"/>
    
        <Button
        android:id="@+id/buttonStartGame"
        android:textColor="@color/white"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="275dp"
        android:text="@string/buttonStartGame"    
        android:background="@drawable/button"
        android:onClick="startGame"/>
    

</RelativeLayout>