<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    xmlns:android2="http://schemas.android.com/apk/res/android"
    xmlns:android3="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   
    tools:context=".GameActivity" >
    
    <!-- <TextView
        android3:id="@+id/textView1"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_marginLeft="73dp"
        android3:layout_marginTop="30dp"
        android3:gravity="center"
        android3:text="@string/difficulty"
        android3:textColor="@color/white"
        android3:textSize="32sp" />

    <Spinner
        android3:id="@+id/spinnerNumberOfQuestions"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_marginTop="37dp"
        android3:background="@color/white"
        android3:entries="@array/arrayNumberOfQuestions"
        android3:prompt="@string/numberOfQuestions"
        android3:textColor="@color/white" />

    <TextView
        android3:id="@+id/TextView01"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_alignLeft="@+id/textView1"
        android3:layout_centerVertical="true"
        android3:text="@string/numberOfQuestions"
        android3:textColor="@color/white"
        android3:textSize="32sp" />

    <Spinner
        android3:id="@+id/Spinner01"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_alignLeft="@+id/spinnerNumberOfQuestions"
        android3:layout_below="@+id/TextView01"
        android3:layout_marginTop="46dp"
        android3:background="@color/white"
        android3:entries="@array/arrayNumberOfQuestions"
        android3:prompt="@string/numberOfQuestions"
        android3:textColor="@color/white" /> -->

    <TextView
        android3:id="@+id/textView1"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_alignParentTop="true"
        android3:layout_centerHorizontal="true"
        android3:layout_marginTop="62dp"
        android3:gravity="center_horizontal"
        android3:text="@string/difficulty"
        android3:textColor="@color/white"
        android3:textSize="32sp" />

    <Spinner
        android3:id="@+id/spinnerDifficulty"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_below="@+id/textView1"
        android3:layout_centerHorizontal="true"
        android3:layout_marginTop="15dp"
        android3:background="@color/white"
        android3:entries="@array/arrayDifficulty"
        
        android3:textColor="@color/black" />


    <TextView
        android3:id="@+id/textView2"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_centerHorizontal="true"
        android3:layout_centerVertical="true"
        android3:text="@string/numberOfQuestions"
        android3:textColor="@color/white"
        android3:textSize="32sp" />
<!--      <Spinner
        android3:id="@+id/spinnerNumberOfQuestions"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_below="@+id/textView2"
        android3:layout_marginTop="38dp"
        android3:background="@color/white"
        android3:entries="@array/arrayNumberOfQuestions"
        android3:prompt="@string/numberOfQuestions"
        android3:textColor="@color/white" />

    <Button
        android3:id="@+id/submitBtn"
        android3:layout_width="wrap_content"
        android3:layout_height="wrap_content"
        android3:layout_below="@+id/spinnerNumberOfQuestions"
        android3:layout_centerHorizontal="true"
        android3:layout_marginTop="35dp"
        android3:background="@drawable/button"
        android3:onClick="getFormData"
        android3:text="@string/submitBtn"
        android3:textColor="@color/white" /> -->

    <Spinner
        android3:id="@+id/spinnerNumberOfQuestions"
        android3:layout_width="wrap_content"
        android3:layout_centerHorizontal="true"
        android3:layout_height="wrap_content"
    	android3:background="@color/white"
        android3:layout_below="@+id/textView2"
        android3:layout_marginTop="46dp"
        android3:entries="@array/arrayNumberOfQuestions"
        android3:prompt="@string/numberOfQuestions"
        android3:textColor="@color/white"
         />

    <Button
        android3:id="@+id/submitBtn"
        android3:layout_width="100dp"
        android3:layout_height="wrap_content"
        android3:layout_below="@+id/spinnerNumberOfQuestions"
        android3:layout_centerHorizontal="true"
        android3:layout_marginTop="27dp"
        android3:background="@drawable/button"
        android3:onClick="submit"
        android3:text="@string/submitBtn"
        android3:textColor="@color/white"/>

</RelativeLayout>
